# Releases

## v0.3.0

## v0.2.0

* add various unit tests
* update maven plugins

## v0.1.0

initial version