@@ -16,6 +16,7 @@ public class HFunctionTest {
         HFunction digest = new HFunction.MacHFunction(Mac.getInstance("HmacSHA256"));
         assertTrue(digest.requireInit());
         assertEquals(32, digest.getHFuncOutputBytes());
+        assertEquals(64, digest.getHFuncInputBlockLengthBytes());
 
         digest.init(new byte[32]);
         digest.update(new byte[0]);
@@ -29,6 +30,7 @@ public class HFunctionTest {
         HFunction digest = new HFunction.MacHFunction(Mac.getInstance("HmacSHA512"));
         assertTrue(digest.requireInit());
         assertEquals(64, digest.getHFuncOutputBytes());
+        assertEquals(128, digest.getHFuncInputBlockLengthBytes());
 
         digest.init(new byte[64]);
         digest.update(new byte[0]);
@@ -42,6 +44,7 @@ public class HFunctionTest {
         HFunction digest = new HFunction.MessageDigestHFunction(MessageDigest.getInstance("SHA-256"));
         assertFalse(digest.requireInit());
         assertEquals(32, digest.getHFuncOutputBytes());
+        assertEquals(64, digest.getHFuncInputBlockLengthBytes());
 
         digest.update(new byte[0]);
         assertEquals("e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855", Bytes.wrap(digest.calculate()).encodeHex());
@@ -54,6 +57,7 @@ public class HFunctionTest {
         HFunction digest = new HFunction.MessageDigestHFunction(MessageDigest.getInstance("SHA-512"));
         assertFalse(digest.requireInit());
         assertEquals(64, digest.getHFuncOutputBytes());
+        assertEquals(128, digest.getHFuncInputBlockLengthBytes());
 
         digest.update(new byte[0]);
         assertEquals("cf83e1357eefb8bdf1542850d66d8007d620e4050b5715dc83f4a921d36ce9ce47d0d13c5d85f2b0ff8318d2877eec2f63b931bd47417a81a538327af927da3e", Bytes.wrap(digest.calculate()).encodeHex());
