@@ -5,7 +5,7 @@ import org.junit.Test;
 
 import static org.junit.Assert.assertEquals;
 
-public class SingleStepKdfRefenceValuesTest {
+public class SingleStepKdfReferenceValuesTest {
 
     @Test
     public void compareAgainstRefValueSha256() {
