@@ -2,6 +2,8 @@
 
 ## v0.3.0
 
+* use block length if null salt is provided instead of hash out length (makes not difference, hmac always pads to block length) #1
+
 ## v0.2.0
 
 * add various unit tests
